Began writing css

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -1,6 +1,23 @@
-{{extend 'layout.html'}}
+<!DOCTYPE html>
 
+<head>
+  <title>Our Walmart - Login</title>
+  <link rel="stylesheet" type="text/css" href="../static/css/main.css">
+</head>
 
-<h2>IF YOU CAN SEE ME, WE GOOD.</h2>
+<body>
+
 <section class="bg-img"></section>
-<section class="signup"></section>
+<section class="signup">
+  <div>
+    <div class="button fifty">facebook</div>
+    <div class="button fifty">google</div>
+    <span class="small-text">we care about your anonymity</span>
+  </div>
+  subtext
+  real signup
+  <div class="button button-full button-submit"><a id="logon">submit</a></div>
+</section>
+</body>
+
+</html>
