Added updated index code

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -1,23 +1,44 @@
 <!DOCTYPE html>
 
 <head>
-  <title>Our Walmart - Login</title>
-  <link rel="stylesheet" type="text/css" href="../static/css/main.css">
+    <title>Our Walmart - Login</title>
+    <link rel="stylesheet" type="text/css" href="../static/css/main.css">
 </head>
 
 <body>
 
-<section class="bg-img"></section>
-<section class="signup">
-  <div>
-    <div class="button fifty">facebook</div>
-    <div class="button fifty">google</div>
-    <span class="small-text">we care about your anonymity</span>
-  </div>
-  subtext
-  real signup
-  <div class="button button-full button-submit"><a id="logon">submit</a></div>
-</section>
+    <section class="bg-img v-center-container">
+       <div class="h-center v-center">
+            <span class="subtext">Join a community of</span>
+            <h1 style="font-size:2em;text-transform:uppercase">over 500,000</h1>
+            <span class="subtext">Our Walmart members.</span>
+        </div>
+    </section>
+
+    <section class="signup v-center-container" style="min-height:40vh;">
+        <div class="v-center">
+        <div class="v-center-container">
+        <div class="v-center h-center">
+            <div class="button facebook">
+                <i class="fa fa-facebook">facebook</i>
+            </div>
+            <div class="button google"><i class="fa fa-google"></i>google</div>
+            <br><br>
+            <div class="small-text">we care about your anonymity</div>
+        </div>
+        </div>
+
+        <br><br><br>
+
+        <div class="h-center">
+           <input placeholder="phone # or email" />
+        </div>
+
+        <div class="button button-full button-bottom button-disabled">
+            <span>submit</span>&nbsp;<i class="fa chevron-right"></i>
+        </div>
+        </div>
+    </section>
 </body>
 
 </html>
