--- a/views/default/index.html
+++ b/views/default/index.html
@@ -2,8 +2,8 @@
 
 <head>
     <title>Our Walmart - Login</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/main.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/animate.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/main.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/animate.css">
 </head>
 
 <body>
