Updated with temp link to lessons

--- a/views/default/lessons.html
+++ b/views/default/lessons.html
@@ -1,6 +1,8 @@
-{{extend 'layout.html'}}
-
-
-<h2>IF YOU CAN SEE ME, WE GOOD.</h2>
-<section class="bg-img"></section>
-<section class="signup"></section>
+<h2>LESSONS</h2>
+<div class="lesson">
+<div class="lesson-number"></div>
+<div class="lesson-info">
+	<h3>Lesson 01</h3>
+	<span>This is information about the lesson, click me to get started</span>
+</div>
+</div>
