--- a/views/default/index.html
+++ b/views/default/index.html
@@ -2,8 +2,8 @@
 
 <head>
     <title>Our Walmart - Login</title>
-    <link rel="stylesheet" type="text/css" href="../../static/css/main.css">
-    <link rel="stylesheet" type="text/css" href="../../static/css/animate.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/main.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/animate.css">
 </head>
 
 <body>
@@ -38,9 +38,9 @@
 
         </div>
 
-        <div class="button button-full button-bottom button-disabled"> <!-- if input has text, then remove button-disabled and add button-active -->
+        <a href="lessons.html"><div class="button button-full button-bottom button-disabled"> <!-- if input has text, then remove button-disabled and add button-active -->
             <span>login</span>&nbsp;<i class="fa fa-chevron-right"></i>
-        </div>
+        </div></a>
         </div>
     </section>
 </body>
