Updated lessons css, other minor
• lessons css progress made
• added pointer events restriction to disabled button

--- a/views/default/lessons.html
+++ b/views/default/lessons.html
@@ -1,8 +1,52 @@
-<h2>LESSONS</h2>
+<!DOCTYPE html>
+
+<head>
+    <title>Our Walmart - Lessons</title>
+    <link rel="stylesheet" type="text/css" href="../../static/css/lessons.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/animate.css">
+</head>
+
+<body>
+
+<nav class="v-center-container">
+	<a href="javascript:history.back()" class="v-center"><i class="fa fa-chevron-left float-left"></i></a>
+	<h1 class="v-center h-center">LESSONS</h1>
+	<a href="menu.html" class="v-center"><i class="fa fa-bars float-right"></i></a>
+</nav>
+
+<div class="lesson" style="background-image:linear-gradient(to right, #eee, #eee 40%, #fff 40%, #fff 85%);"> <!-- ideally, this'd be updated with an ajax call to see what step the user is on; if greater than step one, also change the button below to read "continue lesson" -->
+	<h3><span class="lesson-number">01</span> Labor rights</h3>
+	<span class="lesson-info">This is information about the lesson, click me to get started</span>
+	<br><br>
+	<div class="button button-small">learn more</div>
+</div>
 <div class="lesson">
-<div class="lesson-number"></div>
-<div class="lesson-info">
-	<h3>Lesson 01</h3>
-	<span>This is information about the lesson, click me to get started</span>
+	<h3><span class="lesson-number">01</span> Labor rights</h3>
+	<span class="lesson-info">This is information about the lesson, click me to get started</span>
+	<br><br>
+	<div class="button button-small">learn more</div>
 </div>
+<div class="lesson">
+	<h3><span class="lesson-number">01</span> Labor rights</h3>
+	<span class="lesson-info">This is information about the lesson, click me to get started</span>
+	<br><br>
+	<div class="button button-small">learn more</div>
 </div>
+<div class="lesson">
+	<h3><span class="lesson-number">01</span> Labor rights</h3>
+	<span class="lesson-info">This is information about the lesson, click me to get started</span>
+	<br><br>
+	<div class="button button-small">learn more</div>
+</div>
+<div class="lesson">
+	<h3><span class="lesson-number">01</span> Labor rights</h3>
+	<span class="lesson-info">This is information about the lesson, click me to get started</span>
+	<br><br>
+	<div class="button button-small">learn more</div>
+</div>
+
+
+</body>
+<script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
+
+</html>
