--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -24,12 +24,12 @@ $google-red: #D50F25;
 
 
 /* MIXINS */
-@mixin transition100ms() {
+@mixin transition {
     -webkit-transition: all 100ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
     -moz-transition: all 100ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
     -o-transition: all 100ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
     transition: all 100ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
-}	
+}
 /* ======= */
 
 
@@ -47,8 +47,12 @@ body {
 	background-color:$white;
 	color: $black;
 }
+a, a:visited {
+	color:$gray;
+	text-decoration:none;
+}
 .button {
-	@inlude transition100ms();
+	@include transition;
 	box-sizing: border-box;
 	padding:1em;
 	margin:.5em;
@@ -57,6 +61,15 @@ body {
 	display: inline;
 	border-radius: 5px;
 	cursor:pointer;
+}
+.button:hover {
+	background-color: darken($silver, 2%);
+}
+.button-small {
+	text-transform: uppercase;
+	color:darken($gray, 20%);
+	padding: .5em .8em;
+	margin: 0;
 }
 .v-center {
 	display: table-cell;
@@ -88,6 +101,7 @@ body {
 }
 .button-disabled {
 	cursor:not-allowed;
+	pointer-events: none;
 	background-color: $silver;
 	color:$gray;
 }
@@ -151,4 +165,15 @@ textarea, input { outline: none; }
 	text-transform: uppercase;
 	color:$black;
 	opacity:.5
+}
+.float-right {
+	float:right;
+}
+.float-left {
+	float:left;
+}
+nav a {
+	padding:1em;
+	font-size:1.5em;
+	display:absolute;
 }
