--- a/views/default/lessons.html
+++ b/views/default/lessons.html
@@ -18,31 +18,31 @@
 	<h3><span class="lesson-number">01</span> Labor rights</h3>
 	<span class="lesson-info">This is information about the lesson, click me to get started</span>
 	<br><br>
-	<div class="button button-small">learn more</div>
+	<a href="#"><div><i class="fa fa-chevron-right"></i> Continue lesson</div></a>
 </div>
 <div class="lesson">
 	<h3><span class="lesson-number">01</span> Labor rights</h3>
 	<span class="lesson-info">This is information about the lesson, click me to get started</span>
 	<br><br>
-	<div class="button button-small">learn more</div>
+	<a href="#"><div><i class="fa fa-chevron-right"></i> Start lesson</div></a>
 </div>
 <div class="lesson">
 	<h3><span class="lesson-number">01</span> Labor rights</h3>
 	<span class="lesson-info">This is information about the lesson, click me to get started</span>
 	<br><br>
-	<div class="button button-small">learn more</div>
+	<a href="#"><div><i class="fa fa-chevron-right"></i> Start lesson</div></a>
 </div>
 <div class="lesson">
 	<h3><span class="lesson-number">01</span> Labor rights</h3>
 	<span class="lesson-info">This is information about the lesson, click me to get started</span>
 	<br><br>
-	<div class="button button-small">learn more</div>
+	<a href="#"><div><i class="fa fa-chevron-right"></i> Start lesson</div></a>
 </div>
 <div class="lesson">
 	<h3><span class="lesson-number">01</span> Labor rights</h3>
 	<span class="lesson-info">This is information about the lesson, click me to get started</span>
 	<br><br>
-	<div class="button button-small">learn more</div>
+	<a href="#"><div><i class="fa fa-chevron-right"></i> Start lesson</div></a>
 </div>
 
 
