--- a/views/default/chat.html
+++ b/views/default/chat.html
@@ -1,5 +1,24 @@
-{{for experiences in experiences_list:}}
-        {{=experiences.kind}}
-        {{=experiences.story}}
+<h1>{{=title}}</h1>
 
-{{pass}}
+<div id="write_msg" style="display: none">
+  {{=form}}
+</div>
+
+<div id="write_button_area">
+  <a class="btn btn-success" id="button_write"><i class="fa fa-plus"></i> Write</a>
+</div>
+{{=grid}}
+
+
+<script>
+$(function() {
+  $("#button_write").click(function(e) {
+    $("#write_msg").slideDown();
+    $("#write_button_area").hide();
+  });
+  $("form button").click(function(e) {
+    $("#write_msg").slideUp();
+    $("#write_button_area").show();
+  })
+})
+</script>
