--- a/views/default/menu.html
+++ b/views/default/menu.html
@@ -1,6 +1,42 @@
-{{extend 'layout.html'}}
+<!DOCTYPE html>
 
+<head>
+    <title>Our Walmart</title>
+    <link rel="stylesheet" type="text/css" href="../../static/css/menu.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/animate.css">
+</head>
 
-<h2>IF YOU CAN SEE ME, WE GOOD.</h2>
-<section class="bg-img"></section>
-<section class="signup"></section>
+<body>
+
+	<nav class="v-center-container">
+		<h1 class="v-center h-center animated fadeIn">Our Walmart</h1>
+	</nav>
+
+    <div class="menu-item v-center-container">
+    	<div class="v-center h-center"><a href="lessons.html" class="noformat">
+	    	<h2>lessons</h2><br>
+	    	<div class="thin-text">Learn about the laws built to protect you in the time it takes to do something short. We've broken it down into easy-to-grasp core concepts so you don't have to. <i class="fa fa-chevron-right"></i></div></a>
+    	</div>
+    </div>
+    <div class="menu-item v-center-container"><a href="ourwalmart.html" class="noformat">
+    	<div class="v-center h-center">
+	    	<h2>notifications</h2><br>
+	    	<div class="thin-text">Get the latest updates from Our Walmart, and participate in the protection of you and your fellow employees. <i class="fa fa-chevron-right"></i></div></a>
+    	</div>
+    </div>
+    <div class="menu-item v-center-container"><a href="help.html" class="noformat">
+    	<div class="v-center h-center">
+	    	<h2>get help</h2><br>
+	    	<div class="thin-text">Your coworkers are here for you - talk to other employees who might have had similar experiences to yours, and find some tips that the legal texts can't. <i class="fa fa-chevron-right"></i></div></a>
+    	</div>
+    </div>
+    <div class="menu-item v-center-container"><a href="chats.html" class="noformat">
+    	<div class="v-center h-center">
+	    	<h2>your chats</h2><br>
+	    	<div class="thin-text">Here you'll find your conversations with other Walmart employees. <i class="fa fa-chevron-right"></i></div></a>
+    	</div>
+    </div>
+</body>
+<script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
+
+</html>
