--- a/views/default/lessons.html
+++ b/views/default/lessons.html
@@ -9,22 +9,22 @@
 <body>
 
 <nav class="v-center-container">
-	<a href="javascript:history.back()" class="v-center"><i class="fa fa-chevron-left float-left"></i></a>
-	<h1 class="v-center h-center">LESSONS</h1>
-	<a href="menu.html" class="v-center"><i class="fa fa-bars float-right"></i></a>
+	<a href="javascript:history.back()" class="v-center animated fadeInLeft noformat"><i class="fa fa-chevron-left float-left"></i></a>
+	<h1 class="v-center h-center animated fadeInLeft">Lessons</h1>
+	<a href="menu.html" class="v-center animated fadeInLeft noformat"><i class="fa fa-bars float-right"></i></a>
 </nav>
 
-<div class="lesson" style="background-image:linear-gradient(to right, #eee, #eee 40%, #fff 40%, #fff 85%);"> <!-- ideally, this'd be updated with an ajax call to see what step the user is on; if greater than step one, also change the button below to read "continue lesson" -->
+<div class="lesson" style="background-image:linear-gradient(to right, #eee, #eee 100%, #fff 100%, #fff 85%);"> <!-- ideally, this'd be updated with an ajax call to see what step the user is on; if greater than step one, also change the button below to read "continue lesson" -->
+	<h3><span class="lesson-number">01</span> Labor rights</h3>
+	<span class="lesson-info">This is information about the lesson, click me to get started</span>
+	<br><br>
+	<a href="#"><div><i class="fa fa-chevron-right"></i> Review lesson</div></a>
+</div>
+<div class="lesson" style="background-image:linear-gradient(to right, #eee, #eee 40%, #fff 40%, #fff 85%);">
 	<h3><span class="lesson-number">01</span> Labor rights</h3>
 	<span class="lesson-info">This is information about the lesson, click me to get started</span>
 	<br><br>
 	<a href="#"><div><i class="fa fa-chevron-right"></i> Continue lesson</div></a>
-</div>
-<div class="lesson">
-	<h3><span class="lesson-number">01</span> Labor rights</h3>
-	<span class="lesson-info">This is information about the lesson, click me to get started</span>
-	<br><br>
-	<a href="#"><div><i class="fa fa-chevron-right"></i> Start lesson</div></a>
 </div>
 <div class="lesson">
 	<h3><span class="lesson-number">01</span> Labor rights</h3>
