--- a/views/default/ourwalmart.html
+++ b/views/default/ourwalmart.html
@@ -1,6 +1,33 @@
-{{extend 'layout.html'}}
+<!DOCTYPE html>
 
+<head>
+    <title>Our Walmart - Notifications</title>
+    <link rel="stylesheet" type="text/css" href="../../static/css/menu.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/animate.css">
+</head>
 
-<h2>IF YOU CAN SEE ME, WE GOOD.</h2>
-<section class="bg-img"></section>
-<section class="signup"></section>
+<body>
+
+	<nav class="v-center-container">
+        <a href="javascript:history.back()" class="v-center animated fadeInLeft noformat"><i class="fa fa-chevron-left float-left"></i></a>
+        <h1 class="v-center h-center animated fadeInLeft">Notifications</h1>
+        <a href="menu.html" class="v-center animated fadeInLeft noformat"><i class="fa fa-bars float-right"></i></a>
+	</nav>
+
+    <div class="update">
+        <h3><span class="lesson-number">01</span> Labor rights</h3>
+        <span class="lesson-info">This is information about the lesson, click me to get started</span>
+        <br><br>
+        <a href="#"><div><i class="fa fa-chevron-right"></i> Review lesson</div></a>
+    </div>
+
+    <div class="lesson" style="background-image:linear-gradient(to right, #eee, #eee 100%, #fff 100%, #fff 85%);">
+        <h3><span class="lesson-number">01</span> Labor rights</h3>
+        <span class="lesson-info">This is information about the lesson, click me to get started</span>
+        <br><br>
+        <a href="#"><div><i class="fa fa-chevron-right"></i> Review lesson</div></a>
+    </div>
+</body>
+<script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
+
+</html>
