--- a/views/default/menu.html
+++ b/views/default/menu.html
@@ -2,8 +2,8 @@
 
 <head>
     <title>Our Walmart</title>
-    <link rel="stylesheet" type="text/css" href="../../static/css/menu.css">
-    <link rel="stylesheet" type="text/css" href="../../static/css/animate.css">
+    <link rel="stylesheet" type="text/css" href="{{=URL('static','css/menu.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{=URL('static','css/animate.css')}}">
 </head>
 
 <body>
