--- a/views/default/lessons.html
+++ b/views/default/lessons.html
@@ -2,8 +2,8 @@
 
 <head>
     <title>Our Walmart - Lessons</title>
-    <link rel="stylesheet" type="text/css" href="../../static/css/lessons.css">
-    <link rel="stylesheet" type="text/css" href="../../static/css/animate.css">
+    <link rel="stylesheet" type="text/css" href="{{=URL('static','css/lessons.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{=URL('static','css/animate.css')}}">
 </head>
 
 <body>
