--- a/views/default/lessons.html
+++ b/views/default/lessons.html
@@ -18,7 +18,7 @@
 	<h3><span class="lesson-number">01</span> Labor rights</h3>
 	<span class="lesson-info">This is information about the lesson, click me to get started</span>
 	<br><br>
-	<a href="#"><div><i class="fa fa-chevron-right"></i> Review lesson</div></a>
+	<a href="{{=URL('menu.html')}}"><div><i class="fa fa-chevron-right"></i> Review lesson</div></a>
 </div>
 <div class="lesson" style="background-image:linear-gradient(to right, #eee, #eee 40%, #fff 40%, #fff 85%);">
 	<h3><span class="lesson-number">01</span> Labor rights</h3>
