--- a/views/default/menu.html
+++ b/views/default/menu.html
@@ -13,24 +13,24 @@
 	</nav>
 
     <div class="menu-item v-center-container">
-    	<div class="v-center h-center"><a href="{{=URL('views','default/lessons.html')}}" class="noformat">
+    	<div class="v-center h-center"><a href="{{=URL('lessons.html')}}" class="noformat">
 	    	<h2>lessons</h2><br>
 	    	<div class="thin-text">Learn about the laws built to protect you in the time it takes to do something short. We've broken it down into easy-to-grasp core concepts so you don't have to. <i class="fa fa-chevron-right"></i></div></a>
     	</div>
     </div>
-    <div class="menu-item v-center-container"><a href="{{=URL('views','default/ourwalmart.html')}}" class="noformat">
+    <div class="menu-item v-center-container"><a href="{{=URL('ourwalmart.html')}}" class="noformat">
     	<div class="v-center h-center">
 	    	<h2>notifications</h2><br>
 	    	<div class="thin-text">Get the latest updates from Our Walmart, and participate in the protection of you and your fellow employees. <i class="fa fa-chevron-right"></i></div></a>
     	</div>
     </div>
-    <div class="menu-item v-center-container"><a href="{{=URL('views','default/help.html')}}" class="noformat">
+    <div class="menu-item v-center-container"><a href="{{=URL('help.html')}}" class="noformat">
     	<div class="v-center h-center">
 	    	<h2>get help</h2><br>
 	    	<div class="thin-text">Your coworkers are here for you - talk to other employees who might have had similar experiences to yours, and find some tips that the legal texts can't. <i class="fa fa-chevron-right"></i></div></a>
     	</div>
     </div>
-    <div class="menu-item v-center-container"><a href="{{=URL('views','default/chat.html')}}" class="noformat">
+    <div class="menu-item v-center-container"><a href="{{=URL('people.html')}}" class="noformat">
     	<div class="v-center h-center">
 	    	<h2>your chats</h2><br>
 	    	<div class="thin-text">Here you'll find your conversations with other Walmart employees. <i class="fa fa-chevron-right"></i></div></a>
