--- a/views/default/test.html
+++ b/views/default/test.html
@@ -1,11 +1,12 @@
-<h1>Hello World</h1>
-
-
-        {{=form}}
-<h1>This is the list below</h1>
-
-{{for experiences in experiences_list:}}
-        {{=experiences.kind}}
-        {{=experiences.story}}
-
-{{pass}}
+<form enctype="multipart/form-data"
+  action="{{=URL()}}" method="post">
+     <div class="form-group">
+          <input type="text" class="form-control" name="email">
+     </div>
+     <div class="form-group">
+          <input type="password" class="form-control" name="password">
+     </div>
+     <button type="submit">
+           Submit
+     </button>
+</form>
