--- a/views/default/menu.html
+++ b/views/default/menu.html
@@ -24,7 +24,7 @@
 	    	<div class="thin-text">Get the latest updates from Our Walmart, and participate in the protection of you and your fellow employees. <i class="fa fa-chevron-right"></i></div></a>
     	</div>
     </div>
-    <div class="menu-item v-center-container"><a href="{{=URL('help.html')}}" class="noformat">
+    <div class="menu-item v-center-container"><a href="{{=URL('onboard.html')}}" class="noformat">
     	<div class="v-center h-center">
 	    	<h2>get help</h2><br>
 	    	<div class="thin-text">Your coworkers are here for you - talk to other employees who might have had similar experiences to yours, and find some tips that the legal texts can't. <i class="fa fa-chevron-right"></i></div></a>
