--- a/views/default/people.html
+++ b/views/default/people.html
@@ -1,3 +1,13 @@
-<h1>Find people you want to talk to</h1>
+<!DOCTYPE html>
 
-{{=grid}}
+<head>
+    <title>Our Walmart - Login</title>
+    <link rel="stylesheet" type="text/css" href="{{=URL('static','css/main.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{=URL('static','css/animate.css')}}">
+</head>
+
+<body>
+
+</body>
+
+</html>
