--- a/views/default/ourwalmart.html
+++ b/views/default/ourwalmart.html
@@ -8,11 +8,7 @@
 
 <body>
 
-	<nav class="v-center-container">
-        <a href="javascript:history.back()" class="v-center animated fadeInLeft noformat"><i class="fa fa-chevron-left float-left"></i></a>
-        <h1 class="v-center h-center animated fadeInLeft">Notifications</h1>
-        <a href="menu.html" class="v-center animated fadeInLeft noformat"><i class="fa fa-bars float-right"></i></a>
-	</nav>
+    {{include 'default/top-nav.html'}}
 
     <div class="update">
         <h3><span class="lesson-number">01</span> Labor rights</h3>
