--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -30,6 +30,9 @@ $google-red: #D50F25;
     -o-transition: all 100ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
     transition: all 100ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
 }
+@mixin delay($nsec) {
+	-webkit-animation-delay: $nsec;
+}
 /* ======= */
 
 
@@ -92,6 +95,7 @@ a:not(.noformat):hover {
 }
 .thin-text {
 	width:80%;
+	margin-left:10%;
 }
 .button-bottom {
 	position:absolute;
@@ -192,3 +196,7 @@ nav a:hover i {
 h1, h2 {
 	text-transform:capitalize;
 }
+.menu-item:nth-of-type(1), .lesson:nth-of-type(1) { @include delay(.2s) }
+.menu-item:nth-of-type(2), .lesson:nth-of-type(2) { @include delay(.4s) }
+.menu-item:nth-of-type(3), .lesson:nth-of-type(3) { @include delay(.6s) }
+.menu-item:nth-of-type(4), .lesson:nth-of-type(4) { @include delay(.8s) }
