--- a/views/default/menu.html
+++ b/views/default/menu.html
@@ -8,29 +8,27 @@
 
 <body>
 
-	<nav class="v-center-container">
-		<h1 class="v-center h-center animated fadeIn">Our Walmart</h1>
-	</nav>
+	{{include 'default/basic-nav.html'}}
 
-    <div class="menu-item v-center-container">
+    <div class="menu-item v-center-container animated fadeInUp">
     	<div class="v-center h-center"><a href="{{=URL('lessons.html')}}" class="noformat">
-	    	<h2>lessons</h2><br>
+	    	<h2>learn</h2><br>
 	    	<div class="thin-text">Learn about the laws built to protect you in the time it takes to do something short. We've broken it down into easy-to-grasp core concepts so you don't have to. <i class="fa fa-chevron-right"></i></div></a>
     	</div>
     </div>
-    <div class="menu-item v-center-container"><a href="{{=URL('ourwalmart.html')}}" class="noformat">
+    <div class="menu-item v-center-container animated fadeInUp"><a href="{{=URL('ourwalmart.html')}}" class="noformat">
     	<div class="v-center h-center">
-	    	<h2>notifications</h2><br>
+	    	<h2>participate</h2><br>
 	    	<div class="thin-text">Get the latest updates from Our Walmart, and participate in the protection of you and your fellow employees. <i class="fa fa-chevron-right"></i></div></a>
     	</div>
     </div>
-    <div class="menu-item v-center-container"><a href="{{=URL('onboard.html')}}" class="noformat">
+    <div class="menu-item v-center-container animated fadeInUp"><a href="{{=URL('onboard.html')}}" class="noformat">
     	<div class="v-center h-center">
-	    	<h2>get help</h2><br>
+	    	<h2>connect</h2><br>
 	    	<div class="thin-text">Your coworkers are here for you - talk to other employees who might have had similar experiences to yours, and find some tips that the legal texts can't. <i class="fa fa-chevron-right"></i></div></a>
     	</div>
     </div>
-    <div class="menu-item v-center-container"><a href="{{=URL('people.html')}}" class="noformat">
+    <div class="menu-item v-center-container animated fadeInUp"><a href="{{=URL('people.html')}}" class="noformat">
     	<div class="v-center h-center">
 	    	<h2>your chats</h2><br>
 	    	<div class="thin-text">Here you'll find your conversations with other Walmart employees. <i class="fa fa-chevron-right"></i></div></a>
