Fixed default, updates some links

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -26,10 +26,10 @@
            <input id="username" placeholder="(123) 456-7762" type="text" />
            <br>
            <div class="small-text thin-text"></div>
-           <a href="{{=URL('onboard.html')}}">Already a member? Click me!</a>
+           <a href="{{=URL('logon.html')}}">Already a member? Click me!</a>
         </div>
 
-        <a href="{{=URL('lessons.html')}}"><div class="button button-full button-bottom button-disabled"> <!-- if input has text, then remove button-disabled and add button-active -->
+        <a href="{{=URL('onboard.html')}}"><div class="button button-full button-bottom button-disabled"> <!-- if input has text, then remove button-disabled and add button-active -->
             <span>login</span>&nbsp;<i class="fa fa-chevron-right"></i>
         </div></a>
         </div>
