--- a/views/default/stories.html
+++ b/views/default/stories.html
@@ -1,5 +1,5 @@
 
-        {{=A('Create Board', _class='btn btn-primary btn-lg outline', _href=URL('default', 'create_stories', args=[request.args(0)], user_signature=True))}}
+        {{=A('Create Storie', _class='btn btn-primary btn-lg outline', _href=URL('default', 'create_stories', args=[request.args(0)], user_signature=True))}}
 
 {{for stories in stories_list:}}
     <div class="mylist">
