Added lesson templates

--- a/views/default/lesson02.html
+++ b/views/default/lesson02.html
@@ -1,10 +1,36 @@
-<nav>
-    <div class="back-button"></div>
-    <div class="menu-button"></div>
-</nav>
+<!DOCTYPE html>
+<html>
 
-<section>
-    {{slide content}}
-</section>
+<head>
+<title>Our Walmart {{=response.title}}</title>
+</head>
 
-<div class="button button-full button-next"></div>
+<body>
+
+	{{include 'default/top-nav.html'}}
+
+	<div class="lesson">
+		<section>
+		    <span>snippet here</span>
+		    <div class="button button-active">Next</div>
+		</section>
+		<section>
+		    <span>snippet here</span>
+		    <div class="button button-active">Next</div>
+		</section>
+		<section>
+		    <span>snippet here</span>
+		    <div class="button button-active">Next</div>
+		</section>
+		<section>
+		    <span>snippet here</span>
+		    <div class="button button-active">Next</div>
+		</section>
+		<section class="question">
+		    <span>snippet here</span>
+		    <div class="button button-active">Next</div>
+		</section>
+	</div>
+
+</body>
+</html>
