Set up default stories page

--- a/views/default/menu.html
+++ b/views/default/menu.html
@@ -22,13 +22,13 @@
 	    	<div class="thin-text">Get the latest updates from Our Walmart, and participate in the protection of you and your fellow employees. <i class="fa fa-chevron-right"></i></div></a>
     	</div>
     </div>
-    <div class="menu-item v-center-container animated fadeInUp"><a href="{{=URL('onboard.html')}}" class="noformat">
+    <div class="menu-item v-center-container animated fadeInUp"><a href="{{=URL('stories.html')}}" class="noformat">
     	<div class="v-center h-center">
-	    	<h2>connect</h2><br>
+	    	<h2>stories</h2><br>
 	    	<div class="thin-text">Your coworkers are here for you - talk to other employees who might have had similar experiences to yours, and find some tips that the legal texts can't. <i class="fa fa-chevron-right"></i></div></a>
     	</div>
     </div>
-    <div class="menu-item v-center-container animated fadeInUp"><a href="{{=URL('people.html')}}" class="noformat">
+    <div class="menu-item v-center-container animated fadeInUp"><a href="{{=URL('chat.html')}}" class="noformat">
     	<div class="v-center h-center">
 	    	<h2>your chats</h2><br>
 	    	<div class="thin-text">Here you'll find your conversations with other Walmart employees. <i class="fa fa-chevron-right"></i></div></a>
